# kardeshev

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  ci.yml
assets/: words.txt
generation/: CMakeLists.txt
generation/include/generation/: asteroid_generation.h  galaxy_generation.h  grammar.h  name_generation.h  planet_generation.h  solar_system_generation.h  star_generation.h
generation/src/: galaxy_generation.cpp  grammar.cpp  name_generation.cpp  planet_generation.cpp  solar_system_generation.cpp  star_generation.cpp
include/: art.h  ascii_planets.h  buildings.h  duration.h  galaxy_generation.h  game.h  id.h  planet_generation.h  planets.h  population.h  random.h  render.h  resources.h  solar_system_generation.h  solar_systems.h  star_generation.h  stars.h  util.h
include/generation/: galaxy_generation.h  solar_system_generation.h  star_generation.h
include/lib/: buildings.h  duration.h  galaxy.h  game.h  id.h  planets.h  population.h  resources.h  solar_systems.h  stars.h
include/ui/: artists.h  render.h  ui_elements.h  window.h
kardeshev/: CMakeLists.txt
kardeshev/include/: main.h
kardeshev/src/: main.cpp
lib/: CMakeLists.txt
lib/include/lib/: asteroid.h  astronomical_object.h  astronomical_object_visitor.h  buildings.h  duration.h  galaxy.h  game.h  generators.h  id.h  planets.h  population.h  resources.h  solar_systems.h  stars.h  units.h
lib/src/: asteroid.cpp  buildings.cpp  id.cpp  planets.cpp  population.cpp  solar_systems.cpp  stars.cpp
src/: art.cpp  artists.cpp  buildings.cpp  galaxy_generation.cpp  id.cpp  main.cpp  planet_generation.cpp  planets.cpp  population.cpp  render.cpp  solar_system_generation.cpp  solar_systems.cpp  star_generation.cpp  stars.cpp  util.cpp
ui/: CMakeLists.txt
ui/include/ui/: artists.h  assets.h  entities.h  exceptions.h  render.h  render_visitor.h  screen.h  text.h  texture.h  ui_elements.h  ui_state.h  view.h  window.h
ui/src/: artists.cpp  assets.cpp  entities.cpp  render.cpp  screen.cpp  text.cpp  ui_elements.cpp  ui_state.cpp  view.cpp  window.cpp
util/: CMakeLists.txt
util/include/util/: logger.h  random_generators.h  util.h
util/src/: logger.cpp  random_generators.cpp  util.cpp
